Added a couple of items to the README.md
Added instructions for AndroidX and memory for Gradle while building issues.